--- a/classics17b/lec2/lec2.tex
+++ b/classics17b/lec2/lec2.tex
@@ -2,15 +2,14 @@
 \usepackage{geometry}
 \frenchspacing
 \begin{document}
-\title{Classics 17B: Introduction to Roman Archaeology}
+\title{Classics 17B: Italy Before the Rise of Rome}
 \author{Scribe: Tyler Nguyen}
 \date{Lecture 2: January 19, 2017}
 \maketitle
-\section{Italy Before the Rise of Rome}
 The Etruscans ruled Northern Italy, while the Greeks settled Magna Graecia, Southern Italy.
-\subsection{Architecture and Art}
+\section{Architecture and Art}
 Greek architects concerned with ``proportion and the cosmic order.'' Example: \textsc{Temple of Hera II, Paestum, ca. 460 BCE}.  On public buildings, metopes were used to present a narrative to citizens, regardless of literacy. The only surviving example of Ancient Greek tomb painting is the \textsc{Tomb of the Diver, Paestum, ca. 470 BCE}.  It depicts a symposium, a male drinking party. It may be derivative of Etruscan painting.  The ceiling depicts a diver in an abstract landscape, contrasting with the more natural landscape of the Etruscan \textsc{Tomb of Hunting and Fishing, Tarqunia, ca. 520 BCE}.
-\subsection{Etruscan Civilization}
+\section{Etruscan Civilization}
 Etruscan Villages:\\
 \begin{tabular}{ll}
 Caisra & Cerveteri\\
