--- a/classics17b/lec2/lec2.tex
+++ b/classics17b/lec2/lec2.tex
@@ -8,7 +8,9 @@
 \maketitle
 The Etruscans ruled Northern Italy, while the Greeks settled Magna Graecia, Southern Italy.
 \section{Architecture and Art}
-Greek architects concerned with ``proportion and the cosmic order.'' Example: \textsc{Temple of Hera II, Paestum, ca. 460 BCE}.  On public buildings, metopes were used to present a narrative to citizens, regardless of literacy. The only surviving example of Ancient Greek tomb painting is the \textsc{Tomb of the Diver, Paestum, ca. 470 BCE}.  It depicts a symposium, a male drinking party. It may be derivative of Etruscan painting.  The ceiling depicts a diver in an abstract landscape, contrasting with the more natural landscape of the Etruscan \textsc{Tomb of Hunting and Fishing, Tarqunia, ca. 520 BCE}.
+Greek architects concerned with ``proportion and the cosmic order.'' Example: \textsc{Temple of Hera II, Paestum, ca. 460 BCE}.  On public buildings, metopes were used to present a narrative to citizens, regardless of literacy.
+
+The only surviving example of Ancient Greek tomb painting is the \textsc{Tomb of the Diver, Paestum, ca. 470 BCE}.  It depicts a symposium, a male drinking party. It may be derivative of Etruscan painting.  The ceiling depicts a diver in an abstract landscape, contrasting with the more natural landscape of the Etruscan \textsc{Tomb of Hunting and Fishing, Tarqunia, ca. 520 BCE}.
 \section{Etruscan Civilization}
 Etruscan Villages:\\
 \begin{tabular}{ll}
@@ -24,5 +26,9 @@ Curtun & Cortona\\
 Fulfluna & Populonia\\
 \end{tabular}
 
-Etruscans built villages on hilltops for natural defense. Villanovans predated the Etruscans and practiced cremation. The gender of the deceased could often be discerned from items interred. Upper-class Etruscans began to practice inhumation. Example: \textsc{Regolini-Galassi Tomb, ca. 7th century BCE}. Later apartment-like tumuli sold plots for families. Exmaple: \textsc{Banditaccia Necropolis, Cerveteri}. Sarcophagi were made of dense clay, often with a layer of terra cotta. Example: \textsc{Sarcophagus of the ``married couple,'' Cerveteri, ca. 520 BCE}.  Etruscans provides us with the earliest and largest body of examples of pre-Roman wall painting. Example: \textsc{Tomb of the Bulls, Tarquinia, ca. 540-530 BCE}. Etruscans adopted the Greek alphabet and adapted Greek myth.  The Etruscan language is non-Indo-European. Eggs were symbolic of the afterlife, as depicted in the banquet scene in the \textsc{Tomb of the Leopards, Tarquinia, ca. 480 BCE}.
+Etruscans built villages on hilltops for natural defense. Villanovans predated the Etruscans and practiced cremation. The gender of the deceased could often be discerned from items interred. Upper-class Etruscans began to practice inhumation. Example: \textsc{Regolini-Galassi Tomb, ca. 7th century BCE}.
+
+Later apartment-like tumuli sold plots for families. Exmaple: \textsc{Banditaccia Necropolis, Cerveteri}. Sarcophagi were made of dense clay, often with a layer of terra cotta. Example: \textsc{Sarcophagus of the ``married couple,'' Cerveteri, ca. 520 BCE}.
+
+Etruscans provides us with the earliest and largest body of examples of pre-Roman wall painting. Example: \textsc{Tomb of the Bulls, Tarquinia, ca. 540-530 BCE}. Etruscans adopted the Greek alphabet and adapted Greek myth.  The Etruscan language is non-Indo-European. Eggs were symbolic of the afterlife, as depicted in the banquet scene in the \textsc{Tomb of the Leopards, Tarquinia, ca. 480 BCE}.
 \end{document}
