--- a/classics17b/lec3/lec3.tex
+++ b/classics17b/lec3/lec3.tex
@@ -22,5 +22,15 @@ Before the Roman Forum was drained, it was a gravesite that contained hut urns w
 \item Roman Republic: 509 BCE - 31 BCE
 \end{itemize}
 \subsection{Art and Iconography}
-The \textsc{Capitoline She-Wolf, ca. 480 BCE} is perhaps one of the first commissioned works after the Republic was established.  It was cast in a single bronze piece and produced in an archaic style.  The Etruscan \textit{fasces}, a bundle rods with axes symbolizing power, are another popular symbol in Rome.  The \textsc{Capitoline Triad, ca. 500 BCE} venerated Jupiter, Juno, and Minerva.  Vulca from Veii fashioned the statue of Jupiter inside, as well as Jupiter riding a chariot on the roof.  \textit{Apulu}, or Apollo of Veii, is an example of glyptic art from the roof of the \textsc{Temple of Portonaccio, Veii, ca. 500 BCE}.  Burials, including cinerary urns, can be found, descending from Villanovan tradition.  Bronze mirrors were often found in tombs, sometimes with the side which captured the image of the deceased scratched out.  Example: \textsc{Chalchas examing a liver, Vulci, ca. 400 BCE}.  Inscriptions in paintings like\textsc{Velthur Velcha and Ravnthu Aprthnai attended by musicians, Tomb of the Shields, Tarquinia, ca. 350 BCE} indicates the growing Roman influence on Etruscans.  \textsc{Votive bronze statue of the Chimera, Arezzo, ca. 400 BCE} is an Etruscan work (inscription reads: \textit{tinscvil}, gift of Tin) shows the growing skill of artists working in bronze, as does the \textsc{Mars of Todi, ca. 5th century BCE}.  The \textsc{Sarcophagus of Lars Pulena, Tarquinia, 3rd century BCE} depicts Etruscan beliefs about the underworld, including Charon opening the gates to the underwold with a mallet and Sisyphus with his boulder.  \textsc{L'Arrigatore, bronze, ca. 90 BCE} depicts AVLE METELE, an example of the Romanization of Etruscans, since he wears Roman boots, a tunic with a toga, and is clean shaven.
+The \textsc{Capitoline She-Wolf, ca. 480 BCE} is perhaps one of the first commissioned works after the Republic was established.  It was cast in a single bronze piece and produced in an archaic style.
+
+The Etruscan \textit{fasces}, a bundle rods with axes symbolizing power, are another popular symbol in Rome.  The \textsc{Capitoline Triad, ca. 500 BCE} venerated Jupiter, Juno, and Minerva.  Vulca from Veii fashioned the statue of Jupiter inside, as well as Jupiter riding a chariot on the roof.
+
+\textit{Apulu}, or Apollo of Veii, is an example of glyptic art from the roof of the \textsc{Temple of Portonaccio, Veii, ca. 500 BCE}.
+
+Burials, including cinerary urns, can be found, descending from Villanovan tradition.  Bronze mirrors were often found in tombs, sometimes with the side which captured the image of the deceased scratched out.  Example: \textsc{Chalchas examing a liver, Vulci, ca. 400 BCE}.  Inscriptions in paintings like\textsc{Velthur Velcha and Ravnthu Aprthnai attended by musicians, Tomb of the Shields, Tarquinia, ca. 350 BCE} indicates the growing Roman influence on Etruscans.
+
+\textsc{Votive bronze statue of the Chimera, Arezzo, ca. 400 BCE} is an Etruscan work (inscription reads: \textit{tinscvil}, gift of Tin) shows the growing skill of artists working in bronze, as does the \textsc{Mars of Todi, ca. 5th century BCE}.
+
+The \textsc{Sarcophagus of Lars Pulena, Tarquinia, 3rd century BCE} depicts Etruscan beliefs about the underworld, including Charon opening the gates to the underwold with a mallet and Sisyphus with his boulder.  \textsc{L'Arrigatore, bronze, ca. 90 BCE} depicts AVLE METELE, an example of the Romanization of Etruscans, since he wears Roman boots, a tunic with a toga, and is clean shaven.
 \end{document}
