added missing notes lec4

--- a/classics17b/lec4/lec4.tex
+++ b/classics17b/lec4/lec4.tex
@@ -11,6 +11,8 @@ Temples permitted only priests and other religious officials to enter.  Worshipp
 \begin{itemize}
 \item Rome's first great building program began with the Etruscan kings.
 \item Etruscan artists, architects, merchants, and more flocked to Rome.
+\item When the Monarchy fell, Rome still looked like an Etruscan city.
+\item The Roman Republic established: consuls, enlarged the Senate and created various magistrates in addition to the \textit{Cursus Honorum}.
 \end{itemize}
 According to legend, Rome's transition from Monarchy to Republic was in part triggered by Tarquinius Sextus's rape of Lucretia, wife of a Roman.
 \section{The Roman Republic and walls}
