--- a/classics17b/lec5/lec5.tex
+++ b/classics17b/lec5/lec5.tex
@@ -6,4 +6,48 @@
 \author{Scribe: Tyler Nguyen}
 \date{Lecture 5: January 31, 2017}
 \maketitle
+\section{How do we discuss Roman identity during Rome's early beginnings?}
+\begin{itemize}
+\item \textit{Very carefully}.
+\item A mixture of peoples, cultures, traditions, and ideologies already circulated during the Monarchy.
+\item \textbf{Architecture}: temples, shrines, civic, and other religious buildings.
+\end{itemize}
+The Campus Martius was a marshy area where the Roman militia congregated during the Monarchy.  It was drained during the Republic and transformed.
+\subsection{Archaic buildings in the early Forum and ``identity''}
+\begin{itemize}
+\item Regia
+\item Area of the Vestal Virgins
+\item Lapis Niger
+\end{itemize}
+Temples:\\
+\begin{tabular}{ll}
+Capitoline Triad & 509 BCE\\
+Temple of Saturn & 497 BCE\\
+Temple of Castor & 4th BCE\\
+\end{tabular}\\
+The \textsc{Lapis Niger} (black stone) was an underground chamber in the Forum dating to the archaic period.  There are cisterns from the archaic period on the Palatine.  The \textsc{Cloaca Maxima}, built during the Monarchy, was orignally an open-air canal that drained the Forum, flowing out to the Tiber River.  It was later covered and still functions today.  The \textsc{Regia} was an early building believed to be the residence of the Kings of Rome and later the Pontifex Maximus (head priest of Rome).  Rome's first bridge (that we know of) was the \textsc{Pons Sublicius}, spanning the Tiber River and the Forum Boarium.  The \textsc{Pons Aemilius} (Ponte Rotte) is the  oldest surving stone bridge in Rome, ca. 2nd BCE.  The Sant' Ombono Temples, Forum Boarium, Rome were on the banks of the Tiber River.
+\subsection{Early Roman Roads}
+\begin{itemize}
+\item Via Sacra
+\item Vicus Tuscus
+\end{itemize}
+\section{The Conquest of Italy and Beyond}
+The \textbf{Carthaginian Wars} (or Punic Wars) 264-146 BCE were wars between the Roman Republic and Carthage (founded ca. 800 BCE in Carthage).
+\begin{itemize}
+\item The First Punic War - 264-241 BCE - Rome gained Sicily, Corsica, and Sardinia.
+\item The Second Punic War - 218-201 BCE - Hannibal crosses the Alps with elephants and enters Italy!  Many Roman losses, but at the end of this war, Rome gained part of southern Spain.
+\item The Third Punic War - 149-146 BCE - Carthage burned to the ground, Rome gained Carthage along with Corinth in Greece.
+\end{itemize}
+\section{In Conclusion}
+How do we talk about Roman identity through a combination of literary references and material culture during the Republic?
+\begin{itemize}
+\item Rome sacked by Gauls ca. 390 BCE = Severian Wall.
+\item Recovery of Rome - treaties and wars with Italic tribes, Etruscans, and Greeks.
+\item Emergence of a leading nobility (landowners, i.e. senators and magistrates).
+\item Expansion allowed for cultural differences to disapper as the Italian Peninsula became Romanized.
+\item The Republican Period saw the creation of the \textit{Patricians} and \textit{Plebians}.
+\item The Republican period saw the construction of cities, roads, a centralized army with land and naval power.
+\item Romans came into contact with the ``arts'' from the Etruscans, Magna Graecia, and Greece.
+\item Rome built up a military force during the Carthaginian wars - this made Rome into the leading power of the Mediterranean by 146 BCE.
+\end{itemize}
 \end{document}
