lec 5 init, corrected dashes

--- a/classics17b/lec2/lec2.tex
+++ b/classics17b/lec2/lec2.tex
@@ -30,5 +30,5 @@ Etruscans built villages on hilltops for natural defense. Villanovans predated t
 
 Later apartment-like tumuli sold plots for families. Exmaple: \textsc{Banditaccia Necropolis, Cerveteri}. Sarcophagi were made of dense clay, often with a layer of terra cotta. Example: \textsc{Sarcophagus of the ``married couple,'' Cerveteri, ca. 520 BCE}.
 
-Etruscans provides us with the earliest and largest body of examples of pre-Roman wall painting. Example: \textsc{Tomb of the Bulls, Tarquinia, ca. 540-530 BCE}. Etruscans adopted the Greek alphabet and adapted Greek myth.  The Etruscan language is non-Indo-European. Eggs were symbolic of the afterlife, as depicted in the banquet scene in the \textsc{Tomb of the Leopards, Tarquinia, ca. 480 BCE}.
+Etruscans provides us with the earliest and largest body of examples of pre-Roman wall painting. Example: \textsc{Tomb of the Bulls, Tarquinia, ca. 540--530 BCE}. Etruscans adopted the Greek alphabet and adapted Greek myth.  The Etruscan language is non-Indo-European. Eggs were symbolic of the afterlife, as depicted in the banquet scene in the \textsc{Tomb of the Leopards, Tarquinia, ca. 480 BCE}.
 \end{document}
