--- a/classics17b/lec5/lec5.tex
+++ b/classics17b/lec5/lec5.tex
@@ -34,20 +34,20 @@ The \textsc{Lapis Niger} (black stone) was an underground chamber in the Forum d
 \section{The Conquest of Italy and Beyond}
 The \textbf{Carthaginian Wars} (or Punic Wars) 264-146 BCE were wars between the Roman Republic and Carthage (founded ca. 800 BCE in Carthage).
 \begin{itemize}
-\item The First Punic War - 264-241 BCE - Rome gained Sicily, Corsica, and Sardinia.
-\item The Second Punic War - 218-201 BCE - Hannibal crosses the Alps with elephants and enters Italy!  Many Roman losses, but at the end of this war, Rome gained part of southern Spain.
-\item The Third Punic War - 149-146 BCE - Carthage burned to the ground, Rome gained Carthage along with Corinth in Greece.
+\item The First Punic War---264--241 BCE - Rome gained Sicily, Corsica, and Sardinia.
+\item The Second Punic War---218--201 BCE - Hannibal crosses the Alps with elephants and enters Italy!  Many Roman losses, but at the end of this war, Rome gained part of southern Spain.
+\item The Third Punic War---149--146 BCE - Carthage burned to the ground, Rome gained Carthage along with Corinth in Greece.
 \end{itemize}
 \section{In Conclusion}
 How do we talk about Roman identity through a combination of literary references and material culture during the Republic?
 \begin{itemize}
 \item Rome sacked by Gauls ca. 390 BCE = Severian Wall.
-\item Recovery of Rome - treaties and wars with Italic tribes, Etruscans, and Greeks.
+\item Recovery of Rome---treaties and wars with Italic tribes, Etruscans, and Greeks.
 \item Emergence of a leading nobility (landowners, i.e. senators and magistrates).
 \item Expansion allowed for cultural differences to disapper as the Italian Peninsula became Romanized.
 \item The Republican Period saw the creation of the \textit{Patricians} and \textit{Plebians}.
 \item The Republican period saw the construction of cities, roads, a centralized army with land and naval power.
 \item Romans came into contact with the ``arts'' from the Etruscans, Magna Graecia, and Greece.
-\item Rome built up a military force during the Carthaginian wars - this made Rome into the leading power of the Mediterranean by 146 BCE.
+\item Rome built up a military force during the Carthaginian wars---this made Rome into the leading power of the Mediterranean by 146 BCE.
 \end{itemize}
 \end{document}
