--- a/classics17b/lec6/lec6.tex
+++ b/classics17b/lec6/lec6.tex
@@ -7,7 +7,7 @@
 \date{Lecture 6: February 2, 2017}
 \maketitle
 \section{City Structure}
-Romans adopted the grid plan of Greek and Etruscan cities; cites like Marzabotto and Ostia are evidence of this structure.  Roman armies also camped in grids after marching; soldiers were assigned blocks to be quartered in.  Often, city centers would be built at the intersection of the \textit{cardo} and \textit{decumanos}, streets built on a north-south or east-west axis, respectively.
+Romans adopted the grid plan of Greek and Etruscan cities; cites like Marzabotto and Ostia are evidence of this structure.  Roman armies also camped in grids after marching; soldiers were assigned blocks to be quartered in.  Often, city centers would be built at the intersection of the \textit{cardo} and \textit{decumanos}, streets built on north-south and east-west axes, respectively.
 \section{Pompeii}
 Pompeii contains an amphitheatre, a distinctly Roman structure, where citizens could enjoy bloodsport; Greeks built theatres.
 \begin{itemize}
