--- a/classics17b/lec6/lec6.tex
+++ b/classics17b/lec6/lec6.tex
@@ -38,7 +38,9 @@ August 24, 79 CE on Vulcanalia, the festival in honor of the god Vulcan.  There 
 \item Clear evidence of salvaging or plunder from immediately after the eruption to the present.
 \item All statues in the Forum are missing, as well as marble veneers.
 \item Where were the cult statues (*Capitolium fragments, Aesculapius)?
-\item Holes in houses by tunnellers in search of relics or those trying to escape.
+\item Holes in houses by tunnellers in search of relics or those attempting to escape.
+\item By the Middle Ages \textit{La Civita'} was planted with olive groves.
+\item Pompeii was 'discovered' by mistake in 1592--1600 by the digging of an aqueduct, but nobody paid too much attention.
 \item ``Digging'' started first at Herculaneum, then shifted to Pompeii.
 \item Kingdom of Naples (separate state, Italy was not unified until 1871) passed into the hands of foreign rulers, the Bourbons, the French, the Bourbons again, etc.
 \item The first buildings to come to 'light' at Pompeii were in the theater district: the Temple of Isis (1764), the large theater (1765), the Triangular Forum (1765).  Bodies began to be unearthed too and became a morbid attraction for curious visitors to the site.  The motive for digging was to find buried treasures.
